solucionado botones, favicon y modal

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
 
     <!--====== Google Fonts ======-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,10 +34,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-
-    <link rel="icon" href="/assets/images/favicon.png" type="image/png" />
+    <link rel="icon" href="assets/images/favicon.png" type="image/png">
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/responsive.css" />
     <title>Presupuesto Participativo</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
@@ -55,45 +58,46 @@
         </nav>
       </div>
     </header>
-        <!-- Contenido colapsable del menú -->
-        <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
-          <div class="nav-menu">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link text-white scrollto" href="#sectionHome"
-                  >Inicio</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white scrollto" href="#section1"
-                  >Participá</a
-                >
-            </ul>
-          </div>
-        </div>
-    
-        <!-- Barra de navegación con logo y botón de hamburguesa -->
-        <nav class="navbar navbar-dark">
-          <div class="container-fluid">
-            <!-- Logo de la marca -->
-            <a class="navbar-brand scrollto" href="https://ciudaddemendoza.gob.ar/">
-              <img src="assets/images/logo-footer.png" alt="Logo" />
-              <!-- Reemplaza 'ruta/al/logo.png' por la URL o ruta de tu logo -->
-            </a>
-            <!-- Botón de hamburguesa -->
-            <button
-              class="navbar-toggler collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarToggleExternalContent"
-              aria-controls="navbarToggleExternalContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
+    <!-- Contenido colapsable del menú -->
+    <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
+      <div class="nav-menu">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-white scrollto" href="#sectionHome"
+              >Inicio</a
             >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
-        </nav>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white scrollto" href="#section1"
+              >Participá</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Barra de navegación con logo y botón de hamburguesa -->
+    <nav class="navbar navbar-dark">
+      <div class="container-fluid">
+        <!-- Logo de la marca -->
+        <a class="navbar-brand scrollto" href="https://ciudaddemendoza.gob.ar/">
+          <img src="assets/images/logo-footer.png" alt="Logo" />
+          <!-- Reemplaza 'ruta/al/logo.png' por la URL o ruta de tu logo -->
+        </a>
+        <!-- Botón de hamburguesa -->
+        <button
+          class="navbar-toggler collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarToggleExternalContent"
+          aria-controls="navbarToggleExternalContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
     <main>
       <section class="principal">
         <div class="principal-title">
@@ -106,8 +110,10 @@
             desarrollo. ¡Tu idea puede marcar la diferencia!</span
           >
           <div class="principal-buttons">
-            <a href="#"><button>Postulá tu proyecto</button></a>
-            <a href="#"><button>Votá proyectos</button></a>
+            <a
+              href="docs/Ordenza Nº 4194 Presupuesto Participativo publicacion ordenanza.pdf"
+              ><button>Ordenanza 4194/2024</button></a
+            >
           </div>
         </div>
         <div class="principal-img">
@@ -311,7 +317,7 @@
                   aria-expanded="false"
                   aria-controls="flush-collapseOne"
                 >
-                ¿Qué es el Presupuesto Participativo de la Ciudad de Mendoza?
+                  ¿Qué es el Presupuesto Participativo de la Ciudad de Mendoza?
                 </button>
               </h2>
               <div
@@ -320,7 +326,11 @@
                 data-bs-parent="#accordionFlushExample"
               >
                 <div class="accordion-body">
-                  El Presupuesto Participativo es un mecanismo de participación que incorpora el voto ciudadano como herramienta que permite destinar una parte del Presupuesto Municipal a la realización de proyectos que las personas consideren necesarios en la Ciudad de Mendoza.
+                  El Presupuesto Participativo es un mecanismo de participación
+                  que incorpora el voto ciudadano como herramienta que permite
+                  destinar una parte del Presupuesto Municipal a la realización
+                  de proyectos que las personas consideren necesarios en la
+                  Ciudad de Mendoza.
                 </div>
               </div>
             </div>
@@ -334,7 +344,7 @@
                   aria-expanded="false"
                   aria-controls="flush-collapseTwo"
                 >
-                ¿Quienes pueden votar los proyectos?
+                  ¿Quienes pueden votar los proyectos?
                 </button>
               </h2>
               <div
@@ -343,16 +353,57 @@
                 data-bs-parent="#accordionFlushExample"
               >
                 <div class="accordion-body">
-                  Cualquier persona mayor de 16 años que se encuentre registrada para votar en la Ciudad de Mendoza según en el padrón electoral elaborado por Cámara Nacional Electoral. También pueden votar:
+                  Cualquier persona mayor de 16 años que se encuentre registrada
+                  para votar en la Ciudad de Mendoza según en el padrón
+                  electoral elaborado por Cámara Nacional Electoral. También
+                  pueden votar:
                   <ul>
-                    <li>1. Los mayores de 16 años con domicilio residencial en la Ciudad de Mendoza no registrados en el padrón electoral.</li>
-                    <li>2. Los mayores de 16 años con domicilio laboral en la Ciudad de Mendoza.</li>
-                    <li>3. Los mayores de 16 años que estudien en alguna institución educativa ubicada en la Ciudad de Mendoza, ya sea de nivel secundario, terciario o universitario.</li>
-                    <span>Para votar las personas deben tener domicilio registrado en la Ciudad de Mendoza en su DNI/LC/LE.</span>
-                    <li>A. En el caso de que viva en la Ciudad de Mendoza y no tenga actualizado el domicilio en el mismo, deberá acreditarlo con una foto de un servicio a su nombre donde figure el domicilio que corresponda a la Ciudad de Mendoza.</li>
-                    <li>B. En el caso de que sea un comerciante, profesional o trabajador independiente deberá acreditar el domicilio con una foto de servicio a su nombre o habilitación municipal donde figure un domicilio que se corresponda con la Ciudad de Mendoza.</li>
-                    <li>C. En caso de ser empleado en relación de dependencia podrá acreditar domicilio con una foto de la parte de su recibo de sueldo donde figure el domicilio donde trabaja y se corresponda con la Ciudad de Mendoza o con un certificado de trabajo emitido por su empleador, que contenga dicha información.</li>
-                    <li>D. En el caso de que sea un alumno de una institución educativa de nivel secundario, terciario o universitario ubicada en la Ciudad de Mendoza, deberá acreditarlo con un documento que certifique su concurrencia a dicha institución. </li>
+                    <li>
+                      1. Los mayores de 16 años con domicilio residencial en la
+                      Ciudad de Mendoza no registrados en el padrón electoral.
+                    </li>
+                    <li>
+                      2. Los mayores de 16 años con domicilio laboral en la
+                      Ciudad de Mendoza.
+                    </li>
+                    <li>
+                      3. Los mayores de 16 años que estudien en alguna
+                      institución educativa ubicada en la Ciudad de Mendoza, ya
+                      sea de nivel secundario, terciario o universitario.
+                    </li>
+                    <span
+                      >Para votar las personas deben tener domicilio registrado
+                      en la Ciudad de Mendoza en su DNI/LC/LE.</span
+                    >
+                    <li>
+                      A. En el caso de que viva en la Ciudad de Mendoza y no
+                      tenga actualizado el domicilio en el mismo, deberá
+                      acreditarlo con una foto de un servicio a su nombre donde
+                      figure el domicilio que corresponda a la Ciudad de
+                      Mendoza.
+                    </li>
+                    <li>
+                      B. En el caso de que sea un comerciante, profesional o
+                      trabajador independiente deberá acreditar el domicilio con
+                      una foto de servicio a su nombre o habilitación municipal
+                      donde figure un domicilio que se corresponda con la Ciudad
+                      de Mendoza.
+                    </li>
+                    <li>
+                      C. En caso de ser empleado en relación de dependencia
+                      podrá acreditar domicilio con una foto de la parte de su
+                      recibo de sueldo donde figure el domicilio donde trabaja y
+                      se corresponda con la Ciudad de Mendoza o con un
+                      certificado de trabajo emitido por su empleador, que
+                      contenga dicha información.
+                    </li>
+                    <li>
+                      D. En el caso de que sea un alumno de una institución
+                      educativa de nivel secundario, terciario o universitario
+                      ubicada en la Ciudad de Mendoza, deberá acreditarlo con un
+                      documento que certifique su concurrencia a dicha
+                      institución.
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -367,7 +418,7 @@
                   aria-expanded="false"
                   aria-controls="flush-collapseThree"
                 >
-                No figuro en el Padrón Electoral ¿Qué debo hacer?
+                  No figuro en el Padrón Electoral ¿Qué debo hacer?
                 </button>
               </h2>
               <div
@@ -376,7 +427,16 @@
                 data-bs-parent="#accordionFlushExample"
               >
                 <div class="accordion-body">
-                  Si tenés domicilio legal en la Ciudad de Mendoza pero tu persona no figura en el padrón electoral, podés dirigirite al edificio municipal (calle 9 de Julio 500, Ciudad de Mendoza) y acreditar tu residencia para la votación con una copia del reverso de tu DNI o una foto de un servicio a tu nombre donde figure un domicilio que corresponda a la Ciudad de Mendoza. Para solicitar tu incorporación al padrón electoral podés dirigirte a la Justicia Electoral de Mendoza para realizar un reclamo a la Justicia Nacional Electoral, en los plazos previstos en el Código Electoral Nacional.
+                  Si tenés domicilio legal en la Ciudad de Mendoza pero tu
+                  persona no figura en el padrón electoral, podés dirigirite al
+                  edificio municipal (calle 9 de Julio 500, Ciudad de Mendoza) y
+                  acreditar tu residencia para la votación con una copia del
+                  reverso de tu DNI o una foto de un servicio a tu nombre donde
+                  figure un domicilio que corresponda a la Ciudad de Mendoza.
+                  Para solicitar tu incorporación al padrón electoral podés
+                  dirigirte a la Justicia Electoral de Mendoza para realizar un
+                  reclamo a la Justicia Nacional Electoral, en los plazos
+                  previstos en el Código Electoral Nacional.
                 </div>
               </div>
             </div>
@@ -390,7 +450,7 @@
                   aria-expanded="false"
                   aria-controls="flush-collapseFour"
                 >
-                ¿Cuándo y cómo se vota?
+                  ¿Cuándo y cómo se vota?
                 </button>
               </h2>
               <div
@@ -399,7 +459,16 @@
                 data-bs-parent="#accordionFlushExample"
               >
                 <div class="accordion-body">
-                  La votación de proyectos para ejecutar cada año se realizará a través de la modalidad online, siendo posible votar hasta tres proyectos durante las fechas indicadas en la página principal. Por razones de fuerza mayor el municipio podrá modificar el periodo de votación, en cuyo caso lo comunicará en la plataforma web. Las personas podrán emitir su voto a través de un dispositivo electrónico personal (computadora, tablet, teléfono celular con acceso a internet), en dispositivos instalados en las Delegaciones Municipales o en puntos móviles de votación en la vía pública.
+                  La votación de proyectos para ejecutar cada año se realizará a
+                  través de la modalidad online, siendo posible votar hasta tres
+                  proyectos durante las fechas indicadas en la página principal.
+                  Por razones de fuerza mayor el municipio podrá modificar el
+                  periodo de votación, en cuyo caso lo comunicará en la
+                  plataforma web. Las personas podrán emitir su voto a través de
+                  un dispositivo electrónico personal (computadora, tablet,
+                  teléfono celular con acceso a internet), en dispositivos
+                  instalados en las Delegaciones Municipales o en puntos móviles
+                  de votación en la vía pública.
                 </div>
               </div>
             </div>
@@ -413,7 +482,7 @@
                   aria-expanded="false"
                   aria-controls="flush-collapseFive"
                 >
-                ¿Cómo se deciden los proyectos que se someten a votación?
+                  ¿Cómo se deciden los proyectos que se someten a votación?
                 </button>
               </h2>
               <div
@@ -422,30 +491,39 @@
                 data-bs-parent="#accordionFlushExample"
               >
                 <div class="accordion-body">
-                  Los equipos técnicos de la municipalidad consultan a vecinos y reciben sus propuestas, que posteriormente pasan a una etapa de verificación legal, técnica y presupuestaria. En esta instancia se termina de definir la factibilidad del proyecto y los costos estimados del mismo, teniendo en cuenta que, de resultar ganadores, se ejecutarían en el siguiente año presupuestario.
+                  Los equipos técnicos de la municipalidad consultan a vecinos y
+                  reciben sus propuestas, que posteriormente pasan a una etapa
+                  de verificación legal, técnica y presupuestaria. En esta
+                  instancia se termina de definir la factibilidad del proyecto y
+                  los costos estimados del mismo, teniendo en cuenta que, de
+                  resultar ganadores, se ejecutarían en el siguiente año
+                  presupuestario.
                 </div>
               </div>
             </div>
           </div>
-          
         </div>
       </section>
-       <!-- Modal -->
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <span class="close" id="closeModal">&times;</span>
-      <h2>Postulaciones Cerradas</h2>
-      <p>Por el momento no se encuentran abiertas las postulaciones.</p>
-    </div>
-  </div>
-  <!-- Modal para el botón "Votá Ahora" -->
-<div id="voteModal" class="modal">
-  <div class="modal-content">
-    <span class="close" id="closeVoteModal">&times;</span>
-    <h2>Votación No Disponible</h2>
-    <p>El listado de proyectos no se encuentra habilitado para la votación.</p>
-  </div>
-</div>
+      <!-- Modal -->
+      <div id="modal" class="modal">
+        <div class="modal-content">
+          <span class="close" id="closeModal">&times;</span>
+          <h2>Postulaciones Cerradas</h2>
+          <p>Por el momento no se encuentran abiertas las postulaciones.</p>
+          <img src="assets/images/Online document-pana.png" alt="" />
+        </div>
+      </div>
+      <!-- Modal para el botón "Votá Ahora" -->
+      <div id="voteModal" class="modal">
+        <div class="modal-content">
+          <span class="close" id="closeVoteModal">&times;</span>
+          <h2>Votación No Disponible</h2>
+          <p>
+            El listado de proyectos no se encuentra habilitado para la votación.
+          </p>
+          <img src="assets/images/Events-cuate.png" alt="" />
+        </div>
+      </div>
       <footer>
         <div class="footer-icon footer-container">
           <svg
@@ -992,6 +1070,6 @@
       </footer>
     </main>
 
-<script src="assets/js/modal.js"></script>
+    <script src="assets/js/modal.js"></script>
   </body>
 </html>
