agregado chatbot, traductor y boton back to top

--- a/index.html
+++ b/index.html
@@ -1068,8 +1068,41 @@
           </div>
         </div>
       </footer>
+      <button
+      type="button"
+      class="btn btn-danger btn-floating btn-lg"
+      id="btn-back-to-top"
+    >
+      <i class="fas fa-arrow-up"></i>
+    </button>
+    <div class="gtranslate_wrapper"></div>
     </main>
-
+    <script src="assets/js/back-to-top.js"></script>
     <script src="assets/js/modal.js"></script>
+    <script>
+      (function () {
+        let js = document.createElement("script");
+        js.type = "text/javascript";
+        js.async = 1;
+        js.src = "https://go.botmaker.com/rest/webchat/p/JJTQRYWIGJ/init.js";
+        document.body.appendChild(js);
+      })();
+    </script>
+    <!-- END Botmaker Webchat-->
+
+    <script>
+      window.gtranslateSettings = {
+        default_language: "es",
+        native_language_names: true,
+        detect_browser_language: true,
+        languages: ["es", "de", "it", "ja", "zh-CN", "fr"],
+        wrapper_selector: ".gtranslate_wrapper",
+        alt_flags: { pt: "brazil", es: "argentina", fr: "quebec" },
+      };
+    </script>
+        <script
+        src="https://cdn.gtranslate.net/widgets/latest/float.js"
+        defer
+      ></script>
   </body>
 </html>
